Commit code fix for local Zone Shipping with 0 fee and change type chart revenue for category